--- a/recipe.html
+++ b/recipe.html
@@ -21,7 +21,7 @@
                             Number of servings: 6
                     </p>
                 </td>
-                <td width="50%" align="center"><img src="img/lemon-drizzle-cake.png" width="200" height="200"></td>
+                <td width="50%" align="center"><img src="img_/lemon-drizzle-cake.png" width="200" height="200"></td>
             </tr>
         </hr>
     </table>
